[metadata]
name = youtube-to-frontmatter
version = 2023.6.1
description = This script is to help get metadata out of YouTube Channels and Playlists.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jefftriplett/frontmatter-cli
author = Jeff Triplett
author_email = jeff.triplett@gmail.com
license = PolyForm Noncommercial License 1.0.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = frontmatter, youtube, youtube playlists, youtube channels

[options]
packages = youtube-to-frontmatter
install_requires =
    environs
    google-api-python-client
    pydantic
    python-frontmatter
    python-slugify
    rich
    typer
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    youtube-to-frontmatter = youtube-to-frontmatter:main

[wheel]
universal = 1

[bdist_wheel]
universal = 1
